Add Event NewProductCreated

--- a/front-end/manageProducts.html
+++ b/front-end/manageProducts.html
@@ -75,19 +75,19 @@
               <p class="card-text" id="account_text">Add a product to your shop!</p>
               
                 <div class="form-group">
-                  <label for="title">Product Title</label>
+                  <label for="title">Title</label>
                   <input type="text" class="form-control" id="title" placeholder="Insert a title">
                 </div>
                 <div class="form-group">
-                  <label for="description">Product Title</label>
+                  <label for="description">Description</label>
                   <input type="text" class="form-control" id="description" placeholder="Insert a description">
                 </div>
                 <div class="form-group">
-                  <label for="price">Product Price (in wei)</label>
+                  <label for="price">Price (in wei)</label>
                   <input type="text" class="form-control" id="price" placeholder="Insert a price, in wei">
                 </div>
                 <div class="form-group">
-                  <label for="quantity">Product quantity</label>
+                  <label for="quantity">Quantity</label>
                   <input type="text" class="form-control" id="quantity" placeholder="Insert a quantity avaiable to sell">
                 </div>
               <button id="createProduct" href="#" onclick="createProduct();" class="btn btn-primary">Add product</button>
