Added payable function

--- a/front-end/manageProducts.html
+++ b/front-end/manageProducts.html
@@ -30,13 +30,13 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
-            <li class="nav-item active">
+            <li class="nav-item ">
               <a class="nav-link" href="index.html">Home
-                <span class="sr-only">(current)</span>
               </a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="manageProducts.html">Manage Products</a>
+            <li class="nav-item active">
+              <a class="nav-link" href="manageProducts.html">Manage Products
+              <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="https://github.com/alessandro308/CryptoMarket">About</a>
@@ -147,7 +147,6 @@
             <p id="product_seller"></p>
           </div>
           <div class="modal-footer">
-            <button type="button" class="btn btn-primary">Save changes</button>
             <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
           </div>
         </div>
