--- a/front-end/index.html
+++ b/front-end/index.html
@@ -67,6 +67,13 @@
               
             </div>
           </div>
+          <br/>
+          <div class="card" style="">
+            <div class="card-body" id="orders">
+              <h5 class="card-title">Your orders</h5>
+              //TODO
+            </div>
+          </div>
 
         </div>
         <!-- /.col-lg-3 -->
@@ -95,13 +102,6 @@
       <!-- /.container -->
     </footer>
 
-    <!-- Bootstrap core JavaScript -->
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="js/web3.js"></script>
-     <script src="js/contract.js"></script>
-    <script src="js/ethereum.js"></script>
-
     <!-- Product Detail Modal -->
     <div class="modal fade" id="productModal">
       <div class="modal-dialog" role="document">
@@ -112,20 +112,37 @@
               <span aria-hidden="true">&times;</span>
             </button>
           </div>
-          <div class="modal-body">
+          <div class="modal-body" id="modal-body">
             <p id="product_description"></p>
-            <p id="product_price"></p>
+            <p>Price: <span id="product_price"></span> ETHER</p>
             <p id="product_quantity"></p>
             <p id="product_seller"></p>
+            <p>Product Id: <spam id="product_id"></spam></p>
+            <hr>
+            <div class="form-group">
+              <label for="shippingAddress">Shipping Address:</label>
+              <input type="text" class="form-control" id="shippingAddress" placeholder="Insert here a real address to receive your product">
+            </div>
+            <div class="form-group">
+              <label for="shippingAddress">Quantity:</label>
+              <input type="text" class="form-control" id="quantity" placeholder="How many item?">
+            </div>
+            <p>Total: <span id="total"></span> wei</p><button type="button" class="btn btn-primary" id="buyProductBtn">Buy it!</button>
           </div>
           <div class="modal-footer">
-            <button type="button" class="btn btn-primary">Save changes</button>
             <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
           </div>
         </div>
       </div>
     </div>
     <!-- End Product Detail Modal -->
+
+    <!-- Bootstrap core JavaScript -->
+    <script src="vendor/jquery/jquery.min.js"></script>
+    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="js/web3.js"></script>
+    <script src="js/contract.js"></script>
+    <script src="js/ethereum.js"></script>
   </body>
 
 </html>
